chore: changing styles

--- a/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
+++ b/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
@@ -110,7 +110,11 @@
       <div class="section-header">
         <div class="section-header-start-line"></div>
         <div class="section-header-content">
-          <img class="section-header-logo" src="../../../../../assets/image/section-icons/IEEENews_sin_fondo.png" alt="Logo"/>
+          <img
+            src="../../../../../assets/image/section-icons/IEEEEventos.png"
+            alt="Events"
+            class="section-header-logo"
+          />
           <h1 class="section-title">{{ 'HOME.EVENTS.TITLE' | translate }}</h1>
         </div>
         <div class="section-header-end-line"></div>
