feat: add head, navbar and footer

--- a/src/app/modules/wie/pages/wie.component.html
+++ b/src/app/modules/wie/pages/wie.component.html
@@ -1,1 +1,18 @@
-<p>wie works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ITBA IEEE RAS Student Branch Chapter</title>
+</head>
+<header>
+    <app-navbar></app-navbar>
+</header>
+
+<body>
+
+</body>
+<app-footer></app-footer>
+
+</html>
