--- a/src/app/modules/write-news/pages/write-news/write-news.component.css
+++ b/src/app/modules/write-news/pages/write-news/write-news.component.css
@@ -4,12 +4,89 @@ html {
 }
 
 body {
-    padding: 10%;
-    background: rgb(255, 255, 255);
-    background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
-    background-size: cover;
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  padding: 10% 5%;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
+  background-size: cover;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
 	padding-top: 160px;
+}
+
+/* Extra styles for preview */
+
+.topbottomLine {
+
+  padding-top: 5vmin;
+  padding-bottom: 5vmin;
+  border-top: whitesmoke 2px solid;
+  border-bottom: whitesmoke 2px solid;
+  vertical-align: middle;
+  align-content: center;
+}
+
+.notopbottomLine {
+
+  padding-top: 5vmin;
+  padding-bottom: 5vmin;
+  border-top: whitesmoke 0px solid;
+  border-bottom: whitesmoke 0px solid;
+  vertical-align: middle;
+  align-content: center;
+}
+
+.whitetext{
+  /* color:#ffffff; */
+  line-height: 40px;
+  max-width:850px;
+  font-size: 20px;
+  text-align: left;
+}
+
+.add-margin{
+  margin:20px;
+  margin-bottom: 100px;
+  margin-top: 100px;
+}
+
+.blog-image{
+  max-width: 700px;
+}
+
+.roundedBlock{
+  border-radius: 5vmin;
+}
+
+.whitetext-photo-text{
+  /* color:#ffffff; */
+  font-size:15px;
+  text-align: left;
+  margin:10px;
+}
+
+.author-text{
+  font-size:20px;
+  color:rgb(90, 90, 90);
+  /*color: #ffffff;*/
+  margin:20px;
+  max-width:850px;
+}
+
+.word-break{
+  word-wrap:break-word;
+
+  word-break: break-word;
+}
+
+/*****************************/
+
+.i {
+  line-height: 0;
+}
+
+.editor-container {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
 }
 
 .whiteRoundedBlock{
@@ -21,10 +98,19 @@ body {
 .page-title {
     color: #0d47a1;
 	font-size: 2.5em;
+  margin: 0;
 }
 
-.topbottomLine { 
-    padding-top: 15px;
+.preview-title {
+  font-family: Calibri, sans-serif;
+  color: #373a3c;
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 40px;
+}
+
+.topbottomLine {
+    padding: 15px 0;
     border-top:#0d47a1 2px solid;
     border-bottom: #0d47a1 2px solid;
     vertical-align: middle;
@@ -32,8 +118,7 @@ body {
 }
 
 .bottomLine {
-    padding-top: 5vmin;
-    padding-bottom: 5vmin;
+    padding: 5vmin 0;
     border-bottom: whitesmoke 2px solid;
     vertical-align: middle;
     align-content: center;
