--- a/src/app/modules/emb/page/emb/emb.component.css
+++ b/src/app/modules/emb/page/emb/emb.component.css
@@ -12,8 +12,8 @@ html {
     background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
     background-size: cover;
     font-family: "Roboto", Arial, Helvetica, sans-serif;
-    --ras-red: #862633;
-    --ras-purple: #5f2167;
+    --ras-red: #00629B;
+    --ras-purple: #009CA6;
   }
   
   
