--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,12 +1,9 @@
 <!--Navbar-->
-<mdb-navbar
-  SideClass="navbar navbar-expand-xl navbar-dark"
-  id="nav"
-  mdbStickyHeader
->
+<mdb-navbar SideClass="navbar navbar-expand-xl navbar-dark" id="nav" mdbStickyHeader>
   <!-- Navbar brand -->
   <mdb-navbar-brand><a class="navbar-brand" [routerLink]="['']"><img
-          src="../../../../assets/image/general-icons/IEEE-Logo-No-Text-Darkest.png" height="60vmin" alt="Icon IEEE-ITBA"></a>
+        src="../../../../assets/image/general-icons/IEEE-Logo-No-Text-Darkest.png" height="60vmin"
+        alt="Icon IEEE-ITBA"></a>
   </mdb-navbar-brand>
 
   <!-- All Items -->
@@ -65,8 +62,10 @@
       <!-- Language toggle button -->
       <li class="nav-item">
         <mat-button-toggle-group appearance="legacy" name="fontStyle" aria-label="Font Style">
-          <mat-button-toggle class="es-en-button" value="es" checked="{{ hasSpanishLanguage() }}" (click)="useLanguage('es')">es</mat-button-toggle>
-          <mat-button-toggle class="es-en-button" value="en" checked="{{ hasEnglishLanguage() }}" (click)="useLanguage('en')">en</mat-button-toggle>
+          <mat-button-toggle class="es-en-button" value="es" checked="{{ hasSpanishLanguage() }}"
+            (click)="useLanguage('es')">es</mat-button-toggle>
+          <mat-button-toggle class="es-en-button" value="en" checked="{{ hasEnglishLanguage() }}"
+            (click)="useLanguage('en')">en</mat-button-toggle>
         </mat-button-toggle-group>
       </li>
       <!-- Dropdown -->
@@ -86,7 +85,7 @@
   <button mat-menu-item [routerLink]="['/team']">{{ 'NAVBAR.TEAM' | translate }}</button>
   <button mat-menu-item [routerLink]="['/ras']">RAS</button>
   <button mat-menu-item onclick="window.location.href = 'https://csitba.web.app/'">CS</button>
-  <button mat-menu-item onclick="window.location.href = 'https://wie-itba.github.io/'">WIE</button>
+  <button mat-menu-item [routerLink]="['/wie']">WIE</button>
 </mat-menu>
 
 <mat-menu #menu="matMenu" xPosition="before" yPosition="below">
