--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -12,149 +12,155 @@
 
 <body>
 
-<div class="topbottomLine" id="home" style="margin-bottom:2%">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm">
-        <h1 id="logotext" class="course-title">{{ 'DATAANALYSIS.TITLE' | translate }}</h1>
+  <div class="topbottomLine" id="home" style="margin-bottom:2%">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <h1 id="logotext" class="course-title">{{ 'DATAANALYSIS.TITLE' | translate }}</h1>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-<div *ngIf="isEnrollAvailable()">
-  <div class="d-flex flex-row-reverse">
-    <!-- Button is inside <a> tag because it allows a greater hitmark -->
-    <a href="https://forms.gle/zdYmj6QgzH9iLuJF9" target="_blank" class="button-text">
-      <button class="goback-button">
-        {{ 'DATAANALYSIS.ENROLLBUTTON' | translate }}
-      </button>
-    </a>
-  </div>
-</div>
-
-<div>
-  <div class="d-flex flex-row-reverse">
-    <div *ngIf="hasTestsAvailable() && !contentClosed">
-      <a href="{{ getCurrentTest() }}" target="_blank" class="button-text">
+  <div *ngIf="isEnrollAvailable()">
+    <div class="d-flex flex-row-reverse">
+      <!-- Button is inside <a> tag because it allows a greater hitmark -->
+      <a href="https://forms.gle/zdYmj6QgzH9iLuJF9" target="_blank" class="button-text">
         <button class="goback-button">
-          {{ 'DATAANALYSIS.TESTBUTTON' | translate }}
+          {{ 'DATAANALYSIS.ENROLLBUTTON' | translate }}
         </button>
       </a>
     </div>
   </div>
-</div>
 
-<!-- Introductory text -->
-<br>
-<div>
-  <h2 class="course-subtitle">{{ 'DATAANALYSIS.DESC_TITLE' | translate }}</h2>
-  <p>{{ 'DATAANALYSIS.DESC' | translate }}</p>
-  <h2 class="course-subtitle">{{ 'DATAANALYSIS.FORMAT_SUBTITLE' | translate }}</h2>
-  <p>{{ 'DATAANALYSIS.FORMAT' | translate }}</p>
-</div>
-
-<!-- Cards Temario -->
-
-<div class="marginTop" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="16px" fxLayoutAlign="flex-start">
-
-  <mat-card class="example-card" [ngClass]="{'not-available-background-color':!week1ContentOpen}" fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
-            fxFlex.lt-sm="100%">
-      <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>
-              <ng-template [ngIf]="week1ContentOpen" [ngIfElse]="class1Closed">
-                  <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-python/blob/master/Curso_Analisis_de_Datos_Clases/Clase_1_Analisis_de_Datos.ipynb">{{
-                  'DATAANALYSIS.CLASSES.TITLE' | translate }}
-                  1
-                  </a>
-              </ng-template>
-              <ng-template #class1Closed>
-                  {{'DATAANALYSIS.CLASSES.TITLE' | translate }} 1
-              </ng-template>
-          </mat-card-title>
-          <!-- <mat-card-subtitle>{{ 'DATAANALYSIS.CLASSES.DATE1' | translate }}</mat-card-subtitle> -->
-      </mat-card-header>
-      <mat-card-content>
-          {{ 'DATAANALYSIS.CLASSES.C1' | translate }}
-      </mat-card-content>
-      <!-- Boton del solucionario -->
-      <mat-card-actions align="center">
-          <ng-template [ngIf]="week2ContentOpen" [ngIfElse]="solutions1Closed">
-              <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-python/blob/master/Curso_Analisis_de_Datos_Solucionarios/Solucionario_Clase_1.ipynb">
-                  <button mat-raised-button class="ieeecard-button">{{ 'DATAANALYSIS.SOLUTIONBUTTON' | translate }}</button>
-              </a>
-          </ng-template>
-          <ng-template #solutions1Closed>
-              <button  mat-raised-button disabled class="ieeecard-button button-disabled">{{ 'DATAANALYSIS.SOLUTIONBUTTON' | translate }}</button>
-          </ng-template>
-      </mat-card-actions>
-  </mat-card>
-
-  <mat-card class="example-card" [ngClass]="{'not-available-background-color':!week2ContentOpen}" fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
-            fxFlex.lt-sm="100%">
-      <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>
-              <ng-template [ngIf]="week2ContentOpen" [ngIfElse]="class2Closed">
-                  <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-python/blob/master/Curso_Analisis_de_Datos_Clases/Clase_2_Analisis_de_Datos.ipynb">{{
-                      'DATAANALYSIS.CLASSES.TITLE' | translate }}
-                      2
-                      </a>
-              </ng-template>
-              <ng-template #class2Closed>
-                  {{'DATAANALYSIS.CLASSES.TITLE' | translate }} 2
-              </ng-template>
-          </mat-card-title>
-          <!-- <mat-card-subtitle>{{ 'DATAANALYSIS.CLASSES.DATE2' | translate }}</mat-card-subtitle> -->
-      </mat-card-header>
-      <mat-card-content>
-          {{ 'DATAANALYSIS.CLASSES.C2' | translate }}
-      </mat-card-content>
-      <!-- Boton del solucionario -->
-      <mat-card-actions align="center">
-          <ng-template [ngIf]="week3ContentOpen" [ngIfElse]="solutions2Closed">
-              <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-python/blob/master/Curso_Analisis_de_Datos_Solucionarios/Solucionario_Clase_2.ipynb">
-                  <button mat-raised-button class="ieeecard-button">{{ 'DATAANALYSIS.SOLUTIONBUTTON' | translate }}</button>
-              </a>
-          </ng-template>
-          <ng-template #solutions2Closed>
-              <button  mat-raised-button disabled class="ieeecard-button button-disabled">{{ 'DATAANALYSIS.SOLUTIONBUTTON' | translate }}</button>
-          </ng-template>
-      </mat-card-actions>
-  </mat-card>
-
-</div>
-
-<div class="faq-section">
-  <h2 class="course-subtitle">{{ 'DATAANALYSIS.FAQ.TITLE' | translate}}</h2>
-  <mat-accordion class="faq-accordion">
-
-    <mat-expansion-panel class="mat-elevation-z0" *ngFor="let qa of faq">
-      <mat-expansion-panel-header [collapsedHeight]="'max-content'" [expandedHeight]="'max-content'">
-        <mat-panel-title class="faq-question mt-1 mb-1">
-          {{ qa.q | translate}}
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-
-      <p class="faq-answer">{{ qa.a | translate}}</p>
-    </mat-expansion-panel>
-
-  </mat-accordion>
-</div>
-
-<!-- Sponsors Actuales -->
-<div class="bottomLine mt-4">
-  <div class="row">
-    <h1 class="course-subtitle">Sponsors</h1>
-
-    <br>
-
-    <app-sponsor-component [currentsponsor]="sponsorsServiceVar.getAnalisisSponsors()"></app-sponsor-component>
+  <div>
+    <div class="d-flex flex-row-reverse">
+      <div *ngIf="hasTestsAvailable() && !contentClosed">
+        <a href="{{ getCurrentTest() }}" target="_blank" class="button-text">
+          <button class="goback-button">
+            {{ 'DATAANALYSIS.TESTBUTTON' | translate }}
+          </button>
+        </a>
+      </div>
+    </div>
   </div>
 
-</div>
-<app-footer></app-footer>
+  <!-- Introductory text -->
+  <br>
+  <div>
+    <h2 class="course-subtitle">{{ 'DATAANALYSIS.DESC_TITLE' | translate }}</h2>
+    <p>{{ 'DATAANALYSIS.DESC' | translate }}</p>
+    <h2 class="course-subtitle">{{ 'DATAANALYSIS.FORMAT_SUBTITLE' | translate }}</h2>
+    <p>{{ 'DATAANALYSIS.FORMAT' | translate }}</p>
+  </div>
+
+  <!-- Cards Temario -->
+
+  <div class="marginTop" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="16px" fxLayoutAlign="flex-start">
+
+    <mat-card class="example-card" [ngClass]="{'not-available-background-color':!week1ContentOpen}"
+      fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)" fxFlex.lt-sm="100%">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>
+          <ng-template [ngIf]="week1ContentOpen" [ngIfElse]="class1Closed">
+            <a
+              href="https://colab.research.google.com/github/IEEESBITBA/Curso-python/blob/master/Curso_Analisis_de_Datos_Clases/Clase_1_Analisis_de_Datos.ipynb">{{
+              'DATAANALYSIS.CLASSES.TITLE' | translate }}
+              1
+            </a>
+          </ng-template>
+          <ng-template #class1Closed>
+            {{'DATAANALYSIS.CLASSES.TITLE' | translate }} 1
+          </ng-template>
+        </mat-card-title>
+        <!-- <mat-card-subtitle>{{ 'DATAANALYSIS.CLASSES.DATE1' | translate }}</mat-card-subtitle> -->
+      </mat-card-header>
+      <mat-card-content>
+        {{ 'DATAANALYSIS.CLASSES.C1' | translate }}
+      </mat-card-content>
+      <!-- Boton del solucionario -->
+      <mat-card-actions align="center">
+        <ng-template [ngIf]="week2ContentOpen" [ngIfElse]="solutions1Closed">
+          <a
+            href="https://colab.research.google.com/github/IEEESBITBA/Curso-python/blob/master/Curso_Analisis_de_Datos_Solucionarios/Solucionario_Clase_1.ipynb">
+            <button mat-raised-button class="ieeecard-button">{{ 'DATAANALYSIS.SOLUTIONBUTTON' | translate }}</button>
+          </a>
+        </ng-template>
+        <ng-template #solutions1Closed>
+          <button mat-raised-button disabled class="ieeecard-button button-disabled">{{ 'DATAANALYSIS.SOLUTIONBUTTON' |
+            translate }}</button>
+        </ng-template>
+      </mat-card-actions>
+    </mat-card>
+
+    <mat-card class="example-card" [ngClass]="{'not-available-background-color':!week2ContentOpen}"
+      fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)" fxFlex.lt-sm="100%">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>
+          <ng-template [ngIf]="week2ContentOpen" [ngIfElse]="class2Closed">
+            <a
+              href="https://colab.research.google.com/github/IEEESBITBA/Curso-python/blob/master/Curso_Analisis_de_Datos_Clases/Clase_2_Analisis_de_Datos.ipynb">{{
+              'DATAANALYSIS.CLASSES.TITLE' | translate }}
+              2
+            </a>
+          </ng-template>
+          <ng-template #class2Closed>
+            {{'DATAANALYSIS.CLASSES.TITLE' | translate }} 2
+          </ng-template>
+        </mat-card-title>
+        <!-- <mat-card-subtitle>{{ 'DATAANALYSIS.CLASSES.DATE2' | translate }}</mat-card-subtitle> -->
+      </mat-card-header>
+      <mat-card-content>
+        {{ 'DATAANALYSIS.CLASSES.C2' | translate }}
+      </mat-card-content>
+      <!-- Boton del solucionario -->
+      <mat-card-actions align="center">
+        <ng-template [ngIf]="week3ContentOpen" [ngIfElse]="solutions2Closed">
+          <a
+            href="https://colab.research.google.com/github/IEEESBITBA/Curso-python/blob/master/Curso_Analisis_de_Datos_Solucionarios/Solucionario_Clase_2.ipynb">
+            <button mat-raised-button class="ieeecard-button">{{ 'DATAANALYSIS.SOLUTIONBUTTON' | translate }}</button>
+          </a>
+        </ng-template>
+        <ng-template #solutions2Closed>
+          <button mat-raised-button disabled class="ieeecard-button button-disabled">{{ 'DATAANALYSIS.SOLUTIONBUTTON' |
+            translate }}</button>
+        </ng-template>
+      </mat-card-actions>
+    </mat-card>
+
+  </div>
+
+  <div class="faq-section">
+    <h2 class="course-subtitle">{{ 'DATAANALYSIS.FAQ.TITLE' | translate}}</h2>
+    <mat-accordion class="faq-accordion">
+
+      <mat-expansion-panel class="mat-elevation-z0" *ngFor="let question of ('DATAANALYSIS.FAQ.QUESTIONS' | translate)">
+        <mat-expansion-panel-header [collapsedHeight]="'max-content'" [expandedHeight]="'max-content'">
+          <mat-panel-title class="faq-question mt-1 mb-1">
+            {{ question.QUESTION }}
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+
+        <p class="faq-answer">{{ question.ANSWER }}</p>
+      </mat-expansion-panel>
+
+    </mat-accordion>
+  </div>
+
+  <!-- Sponsors Actuales -->
+  <div class="bottomLine mt-4">
+    <div class="row">
+      <h1 class="course-subtitle">Sponsors</h1>
+
+      <br>
+
+      <app-sponsor-component [currentsponsor]="sponsorsServiceVar.getAnalisisSponsors()"></app-sponsor-component>
+    </div>
+
+  </div>
+  <app-footer></app-footer>
 
 </body>
 
