--- a/src/app/modules/iot/pages/iot/iot.component.html
+++ b/src/app/modules/iot/pages/iot/iot.component.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,13 +10,10 @@
 <header>
   <app-navbar></app-navbar>
 </header>
+
 <body>
   <div class="banner">
-    <img
-      src="../../../../../assets/image/events/iot/iot-banner.jpeg"
-      class="max-width"
-      alt="Banner IOT"
-    />
+    <img src="../../../../../assets/image/events/iot/iot-banner.jpeg" class="max-width" alt="Banner IOT" />
   </div>
   <div class="topbottomLine" id="home" style="margin-bottom:2%">
     <div class="container">
@@ -56,12 +54,9 @@
           <img class="news-card-img" mat-card-image [src]="image" alt="Foto IOT">
         </mat-card>
         -->
-        <img
-          data-src="{{image}}"
-          data-background="../../../../../assets/image/events/python-introductory/cursopython.jpg"
-          class="news-card-img"
-          alt="IoT image"
-        />
+        <img data-src="{{image}}"
+          data-background="../../../../../assets/image/events/python-introductory/cursopython.jpg" class="news-card-img"
+          alt="IoT image" />
       </ng-template>
     </swiper>
   </div>
@@ -70,21 +65,22 @@
     <h2 class="course-subtitle">{{ 'IOT.FAQ.TITLE' | translate }}</h2>
     <mat-accordion class="faq-accordion">
 
-      <mat-expansion-panel class="mat-elevation-z0" *ngFor="let qa of faq">
+      <mat-expansion-panel class="mat-elevation-z0" *ngFor="let question of ('IOT.FAQ.QUESTIONS' | translate)">
         <mat-expansion-panel-header [collapsedHeight]="'max-content'" [expandedHeight]="'max-content'">
           <mat-panel-title class="faq-question mt-1 mb-1">
-            {{ qa.q | translate}}
+            {{ question.QUESTION }}
           </mat-panel-title>
         </mat-expansion-panel-header>
 
-        <p class="faq-answer">{{ qa.a | translate}}</p>
+        <p class="faq-answer">{{ question.ANSWER }}</p>
       </mat-expansion-panel>
 
     </mat-accordion>
   </div>
 
-<hr>
-<app-footer></app-footer>
+  <hr>
+  <app-footer></app-footer>
 
 </body>
+
 </html>
