--- a/src/app/modules/write-news/pages/write-news/write-news.component.css
+++ b/src/app/modules/write-news/pages/write-news/write-news.component.css
@@ -15,7 +15,6 @@ body {
 /* Extra styles for preview */
 
 .topbottomLine {
-
   padding-top: 5vmin;
   padding-bottom: 5vmin;
   border-top: whitesmoke 2px solid;
@@ -25,7 +24,6 @@ body {
 }
 
 .notopbottomLine {
-
   padding-top: 5vmin;
   padding-bottom: 5vmin;
   border-top: whitesmoke 0px solid;
@@ -34,12 +32,108 @@ body {
   align-content: center;
 }
 
-.whitetext{
-  /* color:#ffffff; */
+.full-width {
+  width: 100%;
+}
+
+.half-width {
+  width: 50%;
+}
+
+.preview-card {
+  flex-grow: 1;
+  padding: 2rem 0;
+}
+
+.preview-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 10%;
+}
+
+.preview-title {
+  font-family: Calibri, sans-serif;
+  color: #373a3c;
+  font-weight: 600;
+  font-size: 40px;
   line-height: 40px;
-  max-width:850px;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.news-tags {
+  margin-bottom: 1rem;
+}
+
+.news-tag {
+  background-color: rgb(0, 98, 155) !important;
+  font-size: 1rem;
+  padding: 1rem;
+}
+
+.short-intro-text {
+  font-size: 1rem;
+  color: rgb(102.4, 102.4, 102.4);
+  text-align: justify;
+  text-justify: inter-word;
+  margin: 0;
+}
+
+.preview-image {
+  border: 1px solid;
+  margin-top: 1.5rem;
+}
+
+.preview-epigraph {
+  margin-top: 0.2rem;
+  font-size: 1rem;
+}
+
+.preview-author-date-container {
+  display: inline-flex;
+  gap: 0.3rem;
+  align-items: center;
+  font-size: 1rem;
+  margin: 1rem 0;
+  padding-left: 0.5rem;
+  border-left: 3px solid rgb(0, 98, 155);
+  color: rgb(51 51 51);
+}
+
+.preview-date-container {
+  display: inline-flex;
+  gap: 0.5rem;
+}
+
+::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background {
+  background-color: rgb(0, 98, 155) !important;
+}
+
+::ng-deep .mat-radio-button.mat-accent .mat-radio-inner-circle, .mat-radio-button.mat-accent .mat-radio-ripple .mat-ripple-element:not(.mat-radio-persistent-ripple), .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-persistent-ripple, .mat-radio-button.mat-accent:active .mat-radio-persistent-ripple {
+  background-color: rgb(0, 98, 155) !important;
+}
+
+::ng-deep .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
+  border-color: rgb(0, 98, 155) !important;
+}
+
+.upload-button {
+  text-align: center;
+  color: white;
+  background-color: rgb(0, 98, 155);
+}
+
+.content-text {
+  /* color:#ffffff; */
+  color: rgb(102.4, 102.4, 102.4);
+  width: 90%;
+  text-align: justify;
+  text-justify: inter-word;
+  line-height: 30px;
+  max-width: 850px;
   font-size: 20px;
-  text-align: left;
 }
 
 .add-margin{
@@ -99,14 +193,6 @@ body {
     color: #0d47a1;
 	font-size: 2.5em;
   margin: 0;
-}
-
-.preview-title {
-  font-family: Calibri, sans-serif;
-  color: #373a3c;
-  font-weight: 600;
-  font-size: 40px;
-  line-height: 40px;
 }
 
 .topbottomLine {
