--- a/src/app/modules/write-news/pages/write-news/write-news.component.html
+++ b/src/app/modules/write-news/pages/write-news/write-news.component.html
@@ -24,111 +24,114 @@
     </div>
 
     <div class="editor-container">
-        <mat-card style="max-width: 60%">
+        <mat-card style="max-width: 45%">
             <mat-list-item>
               <!-- Title -->
-              <mat-form-field class="example-full-width" style="width:50vw">
+              <mat-form-field class="full-width">
                 <mat-label>{{ 'WRITE-NEW.TITLE2' | translate }}</mat-label>
                 <input id="title" matInput [(ngModel)]="newsContent.title">
               </mat-form-field>
             </mat-list-item>
             <mat-list-item>
+              <!-- Tags -->
+              <mat-form-field class="full-width">
+                <mat-chip-list #chipList aria-label="Tag selection">
+                  <mat-chip
+                    *ngFor="let tag of currentTags()"
+                    [selectable]="selectable"
+                    [removable]="removable"
+                    (removed)="remove(tag)">
+                    {{tag}}
+                    <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                  </mat-chip>
+                  <input
+                    placeholder="Tags"
+                    #tagInput
+                    [formControl]="tagControl"
+                    [matAutocomplete]="auto"
+                    [matChipInputFor]="chipList"
+                    [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                    (matChipInputTokenEnd)="add($event)">
+                </mat-chip-list>
+                <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
+                  <mat-option *ngFor="let tag of filteredTags | async" [value]="tag">
+                    {{tag}}
+                  </mat-option>
+                </mat-autocomplete>
+              </mat-form-field>
+            </mat-list-item>
+            <mat-list-item>
               <!-- Image -->
-              <mat-form-field class="example-full-width" style="width:50vw">
+              <mat-form-field class="full-width">
                 <mat-label>{{ 'WRITE-NEW.COVERIMG' | translate }}</mat-label>
                 <input id="imageUrl" matInput [(ngModel)]="newsContent.imageUrl">
               </mat-form-field>
             </mat-list-item>
             <mat-list-item>
               <!-- Epigrafe -->
-              <mat-form-field class="example-full-width" style="width:50vw">
+              <mat-form-field class="full-width">
                 <mat-label>{{ 'WRITE-NEW.EPIGRAPH' | translate }}</mat-label>
                 <input id="imageText" matInput [(ngModel)]="newsContent.imageText">
               </mat-form-field>
+            </mat-list-item>
+            <mat-list-item>
+              <mat-checkbox class="has-paragraph-checkbox" [(ngModel)]="hasShortIntro" (ngModelChange)="splitContent()">
+                Primer párrafo encima de imagen
+              </mat-checkbox>
             </mat-list-item>
             <mat-list-item>
               <!-- Body -->
               <form [formGroup]="editorForm">
                 <div class="form-group">
                   <label for="editor">{{ 'WRITE-NEW.BODY' | translate }}</label>
-                  <quill-editor formControlName="editor" (onContentChanged)="updateNewsText()"></quill-editor>
+                  <quill-editor formControlName="editor" (onContentChanged)="updateNewsText($event)"></quill-editor>
                 </div>
               </form>
             </mat-list-item>
             <mat-list-item>
-              <!-- Submit Buttons -->
-              <!-- Listed -->
-              <div class="custom-control custom-checkbox" style="margin-right: 20px">
-                <input type="checkbox" class="custom-control-input" id="listed">
-                <label class="custom-control-label" for="listed">{{ 'WRITE-NEW.CHECKBUTTON' | translate }}</label>
-              </div><br><br>
-              <button mat-raised-button color="primary" id="submitNews" (click)="submitNews()"
-                      style="margin-right: 20px">{{ 'WRITE-NEW.UPLOAD' | translate }}</button>
+              <mat-radio-group aria-label="Select an option" [(ngModel)]="publishNow">
+                <mat-radio-button [value]="true" style="margin-right: 1.5rem;">Publicar ahora</mat-radio-button>
+                <mat-radio-button [value]="false">Programar fecha de publicación</mat-radio-button>
+              </mat-radio-group>
+            </mat-list-item>
+            <mat-list-item>
+              <mat-form-field class="half-width">
+                <mat-label>MM/DD/YYYY</mat-label>
+                <input matInput [min]="minDate" [matDatepicker]="datePicker" [disabled]="publishNow" [formControl]="formControlDate" (dateChange)="changedDate($event)">
+                <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
+                <mat-datepicker #datePicker></mat-datepicker>
+              </mat-form-field>
+            </mat-list-item>
+            <mat-list-item>
+              <button mat-raised-button class="upload-button" id="submitNews" (click)="submitNews()">
+                {{ 'WRITE-NEW.UPLOAD' | translate }}
+              </button>
             </mat-list-item>
         </mat-card>
-        <mat-card style="flex-grow: 1">
-          <div style="display: flex; flex-direction: column; justify-content: center">
-            <h1 class="word-break preview-title">{{newsContent.title || "Title"}}</h1>
-            <span class="word-break" [innerHTML]="newsContent.shortIntro"></span>
-            <div style="display: inline-flex; gap: 1em; align-items: center; padding: 1em 0;">
-              <div style="display: inline-flex; gap: 0.5em">
-                <i style="line-height: inherit" class="fas fa-user"></i>
-                <span class="word-break">{{user.fname + ' ' + user.lname || "Author"}}</span>
-              </div>
-              <div style="display: inline-flex; gap: 0.5em;">
-                <i style="line-height: inherit" class="fas fa-clock"></i>
-                <span class="word-break">{{newsContent.date || "26 Jul 2022"}}</span>
-              </div>
-            </div>
-            <img style="border: 1px solid" src="{{newsContent.imageUrl}}" alt="Imagen de noticia" [width]="600">
-            <span>{{newsContent.imageText || "Epigraph"}}</span>
-            <div [innerHTML]="newsContent.content" class="whitetext word-break"></div>
-          </div>
-          <!--
-          <div>
-            <p class="author-text word-break">
-              {{user.fname + ' ' + user.lname}}
-            </p>
-          </div>
 
-          <div>
-            <div>
-              <div>
-                <div>
-                  <h1 class="word-break preview-title">{{newsContent.title}}</h1>
+        <mat-card class="preview-card">
+          <div class="preview-container">
+            <mat-chip-list class="news-tags">
+              <div *ngFor="let tag of currentTags()">
+                <mat-chip class="news-tag" selected>{{ tag }}</mat-chip>
+              </div>
+            </mat-chip-list>
+            <h1 class="word-break preview-title">{{ newsContent.title || "Title" }}</h1>
+            <span class="word-break short-intro-text" [innerHTML]="newsContent.shortIntro"></span>
+            <img class="preview-image" src="{{ newsContent.imageUrl }}" alt="Imagen de noticia" [width]="600">
+            <span class="preview-epigraph">{{ newsContent.imageText || "Epigraph" }}</span>
+            <div class="content-text word-break">
+              <div class="preview-author-date-container">
+                By
+                <span class="word-break">{{ user.fname + ' ' + user.lname || "Author" }},</span>
+                <div class="preview-date-container">
+                  <span class="word-break">{{ dateFormatted() }}</span>
                 </div>
               </div>
+              <br>
+              <span [innerHTML]="newsContent.content"></span>
             </div>
           </div>
-
-          <div fxLayoutAlign="center center" fxLayout="column">
-            <div fxLayoutAlign="center center" fxLayout="column">
-              <p class="add-margin author-text word-break" [innerHTML]="newsContent.shortIntro"></p>
-            </div>
-          </div>
-
-          <div class="bottomLine">
-
-            <div class="blog-image" fxLayoutAlign="center center" fxLayout="column">
-              <div class="add-margin">
-                <img src="{{newsContent.imageUrl}}" [width]="600">
-
-                <p class="whitetext-photo-text">{{newsContent.imageText}}</p>
-              </div>
-
-            </div>
-          </div>
-
-          <div class="topbottomLine">
-            <div class="container" fxLayoutAlign="center center" fxLayout="column">
-              <div class="row">
-                <div class="col-sm">
-                  <div [innerHTML]="newsContent.content" class="add-margin whitetext word-break"> </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          -->
         </mat-card>
     </div>
 
